Bug 1548630: Preload wintypes.dll off main thread; r=jmathies

Differential Revision: https://phabricator.services.mozilla.com/D34030